# CBullet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  generate_api.py
cbinding/: bullet_api.h  bullet_types.h
demo/: camera.c  camera.h  drawable.c  drawable.h  m_player.c  m_player.h  main.c  makefile  meshes.h  meshgen.c  meshgen.h  shaders.h
wrapper/: bullet_wrapper.cpp  bullet_wrapper.h  main.c
